--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,13 +3,13 @@
 <h5>Items</h5>
 <div class='row'>
 	<div class='col-md-8'>
-		<ul>
+		<ul id='js-items'>
 			<% @items.each do |item| %>
-				<li><%= render partial: 'items/item', locals: {item: item} %></li>
+				<li id=item-<%= item.id %>><%= render partial: 'items/item', locals: {item: item} %></li>
 			<% end %>
 		</ul>
 	</div>
-	<div class='col-md-4'>
+	<div class='col-md-4 new-item'>
 		<%= render partial: 'items/form', locals: {user: @user, item: @user.items.new} %>
 	</div>
 </div>
