--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -1,4 +1,5 @@
 <% if @item.valid? %>
+	$(".flash").prepend("<div class='alert alert-success'><%= flash[:notice] %></div>");
 	$("#js-items").append("<li id=item-<%=@item.id%>><%= escape_javascript(render(@item))%></li>");
 <% else %>
 	$(".flash").prepend("<div class='alert alert-danger'><%= flash.now[:alert] %></div>");
