--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -1,7 +1,7 @@
 <% if @item.valid? %>
-	$(".flash").prepend("<div class='alert alert-success'><%= flash[:notice] %></div>");
+	$(".flash").html("<div class='alert alert-success'><%= flash[:notice] %></div>");
 	$("#js-items").append("<li id=item-<%=@item.id%>><%= escape_javascript(render(@item))%></li>");
 <% else %>
-	$(".flash").prepend("<div class='alert alert-danger'><%= flash.now[:alert] %></div>");
+	$(".flash").html("<div class='alert alert-danger'><%= flash.now[:alert] %></div>");
 <% end %>
 $(".new-item").html("<%= escape_javascript(render partial: 'items/form', locals: {user: @user, item: @user.items.new})%>");
