--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,1 +1,1 @@
-<p> <%= item.name %> <%= link_to "", user_item_path(user_id: item.user.id, id: item.id), method: :delete, class: "glyphicon glyphicon-ok", remote: true %></p>
+<p> <%= item.name %> <em>(<%= distance_of_time_in_words(Time.now, item.created_at)%> old)</em> <%= link_to "", user_item_path(user_id: item.user.id, id: item.id), method: :delete, class: "glyphicon glyphicon-ok", remote: true %></p>
